# betterbot

./: GatewayClient.py  GatewayClientErrors.py  LICENSE  README.md  __init__.py  enums.py  error.py  main.py  setup.py  test.py  test_gateway.py  test_rest_client.py
betterbot/: __init__.py  main.py  pyproject.toml  requirements.txt
betterbot/gateway_client/connection/: heartbeatservice.py
betterbot/rest_client/: restclient.py
betterbot/rest_client/rest_handlers/: application.py  channel.py  endpoints.py  guild.py
betterbot/tests/: example.py
connection/: heartbeatservice.py  identify.py
event_related/: eventbus.py  events.py
gateway_client/: error.py
gateway_client/command_related/: commandbus.py  commands.py
gateway_client/connection/: heartbeatservice.py  identify.py  session.py
gateway_client/event_related/: eventbus.py  events.py  handle_event_responses.py
gateway_client/handlers/: handle_responses.py  websocket_handler.py
handlers/: handle_event_responses.py  handle_responses.py  websocket_handler.py
rest_client/: endpoints.py  error.py  eventsend.py  restclient.py  wrapper.py
rest_client/channel/: channel.py
rest_client/guild/: guild.py
rest_client/interaction/: interaction.py
rest_client/rest_handlers/: application.py  channel.py  endpoints.py  guild.py  interaction.py
tests/: example.py  example2.py  example2depend.py  test_gateway.py  test_rest_client.py
tests/example2/: ban.py  main.py  sqlitehandler.py  vouch.py
