[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Betterbot"
version = "4.0.0"
authors = [
  { name="Christian Hasan" },
]
description = "A discord bot framework!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets",
    "httpx"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["Betterbot/LICENSE"]

[project.urls]
Homepage = "https://github.com/christianhasan/betterbot"
Issues = "https://github.com/christianhasan/betterbot/issues"